--- a/IanSavchenko.Controls/IanSavchenko.Controls.csproj
+++ b/IanSavchenko.Controls/IanSavchenko.Controls.csproj
@@ -87,6 +87,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ListSelector.cs" />
+    <Compile Include="ListSelectorFlyout.cs" />
     <Compile Include="ListSelectorItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\ScheduleInvoker.cs" />
